# styx

./: .gitignore  CMakeLists.txt  README.md  config.h.in  styx.1
docs/: TODO
src/: settings.h  styx.c  styx.h  x.c
